fix: Fix search bar colors in dark mode

--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -35,6 +35,9 @@
     border:none
 }
 
+.search-button{
+    color: var(--search-text);
+}
 
 /* Theme toggle styles*/
 
