--- a/global.css
+++ b/global.css
@@ -25,7 +25,7 @@
   --card-bg: #021826;
   --background: #0C1019;
   --footer-bg: #000000;
-  --search-bg: #021826;
-  --search-text: #FFFFFF;
+/*   --search-bg: #021826;
+  --search-text: #FFFFFF; */
   --theme-toggle-bg: #021826;
 }
